<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_item_home" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_item_account" />
    </group>

    <item android:title="@string/menu_item_academics">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/test_taking"
                    android:icon="@drawable/ic_test_taking"
                    android:title="@string/menu_item_test_taking" />
                <item
                    android:id="@+id/note_taking"
                    android:icon="@drawable/ic_note_taking"
                    android:title="@string/menu_item_note_taking"/>
                <item
                    android:id="@+id/organizational_skills"
                    android:icon="@drawable/ic_organizational_skills"
                    android:title="@string/menu_item_organization"/>
                <item
                    android:id="@+id/well_being"
                    android:icon="@drawable/ic_well_being"
                    android:title="@string/menu_item_wb" />
                <item
                    android:id="@+id/self_awareness"
                    android:icon="@drawable/ic_self_awareness"
                    android:title="@string/menu_item_self_awareness" />
                <item
                    android:id="@+id/motivation"
                    android:icon="@drawable/ic_motivation"
                    android:title="@string/menu_item_motivation" />
                <item
                    android:id="@+id/perseverance"
                    android:icon="@drawable/ic_perseverance"
                    android:title="@string/menu_item_perseverance" />
                <item
                    android:id="@+id/cultural_id"
                    android:icon="@drawable/ic_cultural_id"
                    android:title="@string/menu_item_cultural_identity" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_log_out"
        android:title="@string/menu_item_sign_out" />

</menu>